# Notion-Assist

./: .env.example  .gitignore  README.md  example_extraction_test.txt  pyproject.toml  requirements.txt
src/: settings.py
src/extractors/: __init__.py  base.py  notion.py
test/: test_extractors.py  test_notion_url_extraction.py
